tests/error/type_errors/binary_not_arith_right.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: int) -> int:
6:        return x + True
                     ^^^^
GuppyTypeError: Expected expression of type `int` or `float`, but got `True` of type `bool`
